5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1836_1276.log
== TEST (2019-06-25 11:13:30) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

x = shape(vet)[0]

total = zeros(x,dtype = int)
for i in range(x):
	total[i] = sum(vet[i,:])
	
print(max(j))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:14:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

x = shape(vet)[0]

total = zeros(x,dtype = int)
for i in range(x):
	total[i] = sum(vet[i,:])
	
a = zeros(total,dtype = int)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:15:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

x = shape(vet)[0]

total = zeros(x,dtype = int)
for i in range(x):
	total[i] = sum(vet[i,:])
	
a = zeros(total,dtype = int)
for i in range(total):
	a[i] = total[i]
	
print(max(a[j]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:16:30) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

x = shape(vet)[0]

total = zeros(x,dtype = int)
for i in range(x):
	total[i] = sum(vet[i,:])
	
a = zeros(total,dtype = int)
for i in range(total):
	a[i] = total[i]
	
print(max(a))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:17:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

x = shape(vet)[0]

total = zeros(x,dtype = int)
for i in range(x):
	total[i] = sum(vet[i,:])
	
a = zeros(total,dtype = int)
for i in range(total):
	a[i] = total[i]
	
print(a)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:18:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

x = shape(vet)[0]

total = zeros(x,dtype = int)
for i in range(x):
	total[i] = sum(vet[i,:])
	
a = zeros(total,dtype = int)
for i in range(size(total)0:
	a[i] = total[i]
	
print(a)	
-- ERROR:
File "XXXX", line 13
    for i in range(size(total)0:
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:18:16) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

x = shape(vet)[0]

total = zeros(x,dtype = int)
for i in range(x):
	total[i] = sum(vet[i,:])
	
a = zeros(total,dtype = int)
for i in range(size(total)):
	a[i] = total[i]
	
print(a)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:18:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

x = shape(vet)[0]

total = zeros(x,dtype = int)
for i in range(x):
	total[i] = sum(vet[i,:])
	
a = zeros(total,dtype = int)
for i in range(size(total)):
	a[i] = total[i]
	
print(a)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:23:02) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

x = shape(vet)[0]

total = zeros(7,dtype = int)
for i in range(7):
	total[i] = sum(vet[i,:])
	
for j in range(size(total)):
	if(total[j] == max(total)):
		print(j + 1)
	
print(a)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:23:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

x = shape(vet)[0]

total = zeros(7,dtype = int)
for i in range(7):
	total[i] = sum(vet[:,i])
	
for j in range(size(total)):
	if(total[j] == max(total)):
		print(j + 1)
	
print(a)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:24:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

x = shape(vet)[0]

total = zeros(7,dtype = int)
for i in range(7):
	total[i] = sum(vet[:,i])
	
for j in range(size(total)):
	if(total[j] == max(total)):
		print(j + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:24:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira a matriz:")))

x = shape(vet)[0]

total = zeros(7,dtype = int)
for i in range(7):
	total[i] = sum(vet[:,i])
	
for j in range(size(total)):
	if(total[j] == max(total)):
		print(j + 1)
-- EXECUTION TIME:
1.12219
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
